--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
             <div class="password-dialog">
                 <h3>Student Access Required</h3>
                 <p class="access-info">
-                    This section is exclusively available to Amir students enrolled in<br>
+                    This section is exclusively available to Amir's students enrolled in<br>
                     <strong>Fundamentals of Mathematics</strong>
                 </p>
                 <div class="password-input-group">
@@ -1107,7 +1107,7 @@
             const password = document.getElementById('password-field').value;
             
             // ** PASSWORD CHECK **
-            if (password === "maths2025") {
+            if (password === "wholoveamir") {
                 state.isUnlocked = true;
                 closePasswordModal();
                 updateTabLocks();
