--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
 <body>
     <div class="container">
         <div class="mathswell-nav">
-            <a href="/" class="mw-link">
+            <a href="https://mathswell.com" class="mw-link">
                 <img src="/logo-mathswell-square-mirror.svg" alt="Mathswell" width="28" height="28">
                 <span>MATHSWELL</span>
             </a>
